update images path

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="movies owl-carousel owl-theme">
-          <div class="movie p-0"><img src="/images/the-watcher.jpg" alt="The Watcher"/>
+          <div class="movie p-0"><img src="./images/the-watcher.jpg" alt="The Watcher"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">The Watcher</h2><span class="ml-2 mt-2">2019</span>
@@ -95,7 +95,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/aladdin.jpg" alt="Aladdin"/>
+          <div class="movie p-0"><img src="./images/aladdin.jpg" alt="Aladdin"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">Aladdin</h2><span class="ml-2 mt-2">2018</span>
@@ -107,7 +107,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/ai-rising.jpg" alt="AI Rising"/>
+          <div class="movie p-0"><img src="./images/ai-rising.jpg" alt="AI Rising"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">AI Rising</h2><span class="ml-2 mt-2">2019</span>
@@ -119,7 +119,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/his-dark.jpg" alt="His Dark"/>
+          <div class="movie p-0"><img src="./images/his-dark.jpg" alt="His Dark"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">His Dark</h2><span class="ml-2 mt-2">2019</span>
@@ -131,7 +131,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/lion-king.jpg" alt="The Lion King"/>
+          <div class="movie p-0"><img src="./images/lion-king.jpg" alt="The Lion King"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">The Lion King</h2><span class="ml-2 mt-2">2019</span>
@@ -154,7 +154,7 @@
           </div>
         </div>
         <div class="movies owl-carousel owl-theme">
-          <div class="movie p-0"><img src="/images/frozenII.jpg" alt="Frozen II"/>
+          <div class="movie p-0"><img src="./images/frozenII.jpg" alt="Frozen II"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">Frozen II</h2><span class="ml-2 mt-2">2019</span>
@@ -166,7 +166,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/jumanji.jpg" alt="Jumanji"/>
+          <div class="movie p-0"><img src="./images/jumanji.jpg" alt="Jumanji"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">Jumanji</h2><span class="ml-2 mt-2">2019</span>
@@ -178,7 +178,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/the-purge.jpg" alt="The Purge"/>
+          <div class="movie p-0"><img src="./images/the-purge.jpg" alt="The Purge"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">The Purge</h2><span class="ml-2 mt-2">2019</span>
@@ -190,7 +190,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/togo.jpg" alt="ToGo"/>
+          <div class="movie p-0"><img src="./images/togo.jpg" alt="ToGo"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">ToGo</h2><span class="ml-2 mt-2">2019</span>
