--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav><!-- ./navbar -->
       <div class="movies owl-carousel owl-theme">
         <div class="movie text-white d-flex justify-content-center align-items-center">
-          <div class="movie__bg" style="background: linear-gradient(rgba(44,62,80,0.7), rgba(44,62,80,0.7)),url('/images/the-watcher.jpg') center/cover no-repeat;"></div>
+          <div class="movie__bg" style="background: linear-gradient(rgba(44,62,80,0.7), rgba(44,62,80,0.7)),url('./images/the-watcher.jpg') center/cover no-repeat;"></div>
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-10 mx-auto my-5 col-md-6 my-md-0">
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="movie text-white d-flex justify-content-center align-items-center">
-          <div class="movie__bg" style="background: linear-gradient(rgba(44,62,80,0.7), rgba(44,62,80,0.7)),url('/images/iron-man.jpg') center/cover no-repeat;"></div>
+          <div class="movie__bg" style="background: linear-gradient(rgba(44,62,80,0.7), rgba(44,62,80,0.7)),url('./images/iron-man.jpg') center/cover no-repeat;"></div>
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-10 mx-auto my-5 col-md-6 my-md-0">
