--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/iron-man.jpg" alt="Iron Man"/>
+          <div class="movie p-0"><img src="./images/iron-man.jpg" alt="Iron Man"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">Iron Man</h2><span class="ml-2 mt-2">2019</span>
