update images path

--- a/show.html
+++ b/show.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="movies owl-carousel owl-theme">
-          <div class="movie p-0"><img src="/images/the-watcher.jpg" alt="The Watcher"/>
+          <div class="movie p-0"><img src="./images/the-watcher.jpg" alt="The Watcher"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">The Watcher</h2><span class="ml-2 mt-2">2019</span>
@@ -74,7 +74,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/aladdin.jpg" alt="Aladdin"/>
+          <div class="movie p-0"><img src="./images/aladdin.jpg" alt="Aladdin"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">Aladdin</h2><span class="ml-2 mt-2">2018</span>
@@ -86,7 +86,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/ai-rising.jpg" alt="AI Rising"/>
+          <div class="movie p-0"><img src="./images/ai-rising.jpg" alt="AI Rising"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">AI Rising</h2><span class="ml-2 mt-2">2019</span>
@@ -98,7 +98,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/his-dark.jpg" alt="His Dark"/>
+          <div class="movie p-0"><img src="./images/his-dark.jpg" alt="His Dark"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">His Dark</h2><span class="ml-2 mt-2">2019</span>
@@ -110,7 +110,7 @@
               <div class="movie__actions mt-2"><a class="btn btn-primary" href="javascript:;"><i class="fa fa-play mr-2"> </i><span>Watch Now</span></a></div>
             </div>
           </div>
-          <div class="movie p-0"><img src="/images/lion-king.jpg" alt="The Lion King"/>
+          <div class="movie p-0"><img src="./images/lion-king.jpg" alt="The Lion King"/>
             <div class="movie__details px-3">
               <div class="movie__title d-flex">
                 <h2 class="text-capitalize">The Lion King</h2><span class="ml-2 mt-2">2019</span>
